# diding-auto

./: .env.example  .gitignore  README.md  install.bat  install.ps1  pyproject.toml  setup_env.ps1
docs/: qesg.md
qesg/: __init__.py  cli.py
qesg/app/: __init__.py  llm.py  main.py
qesg/commands/: data.py  doc.py  guide.py  mail.py  schedule.py
qesg/core/: config.py  google_api.py  google_auth.py  gws.py  output.py
qesg/recipes/: __init__.py
