[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qesg"
version = "0.1.0"
description = "AI-agent friendly business workflow CLI"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
]

[project.optional-dependencies]
google = [
    "google-api-python-client>=2.100",
    "google-auth-oauthlib>=1.1",
]

[project.scripts]
qesg = "qesg.cli:main"

[tool.setuptools.packages.find]
include = ["qesg*"]
