[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qesg"
version = "0.1.0"
description = "AI-agent friendly business workflow CLI"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "flet>=0.25",
]

[project.optional-dependencies]
google = [
    "google-api-python-client>=2.100",
    "google-auth-oauthlib>=1.1",
]
llm = [
    "google-genai>=1.0",
    "anthropic>=0.40",
    "openai>=1.50",
]

[project.scripts]
qesg = "qesg.cli:main"
qesg-app = "qesg.app.main:run"

[tool.setuptools.packages.find]
include = ["qesg*"]
